# projecteuler-hs

./: Atkin.hs  Euler.cabal  EulerUtil.hs  Input.hs  Makefile  Monopoly.hs  PQ.hs  PTriplets.hs  Set0.hs  Set1.hs  Set2.hs  Set3.hs  Set4.hs  Set5.hs  Set6.hs  Set7.hs  Set8.hs  Set9.hs  Sorted.hs  build  check  euler.hs
