name:                Euler
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
-- license-file:        LICENSE
author:              David Adler
maintainer:          adlerd@secundaverba.net
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable Euler
  main-is:             euler.hs
  -- other-modules:       
  other-extensions:    FlexibleContexts
  build-depends:       base >=4.8 && <4.9, array >=0.5 && <0.6, mtl >=2.2 && <3.0, containers >=0.5 && <0.6, parsec >=3.1 && <4.0, deepseq >=1.4 && <2.0, vector >=0.11 && <0.12, lens >=4.14, parallel >=3.2.1 && < 4.0, data-memocombinators >=0.5.1
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -with-rtsopts=-N -threaded
